--- a/contact.html
+++ b/contact.html
@@ -42,11 +42,11 @@
             <div class="contact_nav">
               <a href="">
                 <i class="fa fa-phone" aria-hidden="true"></i>
-                <span> Call : +01 123455678990 </span>
+                <span> Call : +82 010-5647-8778 </span>
               </a>
               <a href="">
                 <i class="fa fa-envelope" aria-hidden="true"></i>
-                <span> Email : demo@gmail.com </span>
+                <span> Email : gu2091@kakao.com </span>
               </a>
             </div>
           </div>
